Fix space gap on the right side of the page

--- a/src/app/components/landing/landing.component.scss
+++ b/src/app/components/landing/landing.component.scss
@@ -171,18 +171,17 @@
 			transform-origin: bottom;
 			transform: scaleY(1.8);
 		}
+		&__headings {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			width: auto;
+		}
 	}
 	.section-functionality {
 		height: auto;
 	}
 	.section-team {
 		height: auto;
-	}
-}
-
-@media (max-width: 480px) {
-	.section-functionality {
-		.explanation-card {
-		}
 	}
 }
